# paws-ledger

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  deployment_instruction.md  docker-compose.yml  main.py  migrate.py  mockup-dashboard.html  pawsledger.db-shm  pawsledger.db-wal  pyproject.toml  requirements.txt  run_instructions.md  seed_db.py
.github/workflows/: deploy.yml
agents/: builder.md  manager.md  planner.md  reviewer.md  tester.md  ux-tester.md
app/: Dockerfile  database.py  main.py  models.py  models.py.bak  requirements.txt  seo_pages.py
app/data/: __init__.py  canine_vaccinations.json  feline_vaccinations.json
app/services/: __init__.py  integrations.py  r2_storage.py  stripe_service.py
app/templates/: about.html  base.html  contact.html  faq.html  lost.html  pricing.html  privacy.html  terms.html  verify.html
app/ui/: __init__.py  about.py  common.py  contact.py  dashboard_shell.py  faq.py  footer.py  header.py  index.py  layout.py  login.py  lookup.py  lost.py  manage_shared_access.py  manage_tags.py  nudge_history.py  nudge_reply.py  owner_dashboard.py  owner_profile.py  pages.py  pet_profile.py  pet_register.py  pricing.py  privacy.py  qr_profile.py  shared_access.py  subscription.py  terms.py  verify.py
docs/: deployment_instruction.md  development_instructions.md  maintenance_instructions.md
docs/spec/: business_requirements_v1.md  business_requirements_v1_free_tier.md  business_requirements_v1_guardian_tier.md  business_requirements_v1_verified_tier.md  deployment_requirements_v1.md  sequence_diagrams.md  technical_requirements_v1.md  ux_requirements_v1.md
spec/: business_requirements_v1.md  spec_v1.md  ui_flow_requiremetns_v1.md
tests/: conftest.py  test_api.py  test_auth.py  test_bug_conditions.py  test_preservation.py  test_services.py  test_ui_workflows.py
(+37 files in other folders)
