[project]
name = "paws-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.7.0",
    "fastapi>=0.136.1",
    "fpdf>=1.7.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "nicegui>=3.11.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "resend>=2.0.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
