[project]
name = "paws-ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.7.2",
    "boto3>=1.43.24",
    "fastapi>=0.136.3",
    "fpdf>=1.7.2",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "nicegui>=3.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "resend>=2.30.1",
    "segno>=1.6.6",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
    "stripe>=15.2.0",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
